[project]
name = "rooveeosm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "diskcache>=5.6.3",
    "geojson>=3.2.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "overpy>=0.7",
    "python-slugify>=8.0.4",
    "starsep-utils>=0.9.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.9",
]
